syntax = "proto3";

package smartassistent;

service Comet {
    rpc BidStream (stream Request) returns (stream Response);
    rpc FindDevice (DeviceReq) returns (Device);
}

message DeviceReq {
    string id = 1;
}

// Device TODO 补充详细字段
message Device {
    string id = 1;
    string name = 2;
    string identity = 3;
    string model = 4;
    string sw_version = 5;
    string manufacturer = 6;
    string plugin_id = 7;
    string address = 8;
}

message Request {
    string event = 1;
    bytes body = 2;
}

// TODO 需要确定对应的json
// 1）发现设备回调；
// 2）状态变更回调；
message Response {
    bytes body = 2;
}